[SYNC] Even more recipe gen and number items
Textures are left out as they don't exist yet

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,8 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mc_version=1.18.2
+minecraft_version=1.18.2
 jei_version=9.7.0.195
+
+mantle_version=1.9.19
+tic_version=3.5.0.18
